spell check done
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11412 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/abstract.tex
+++ b/2013/1km paper/abstract.tex
@@ -10,7 +10,7 @@ imposes on the functional forms of the interference term and of modulus and
 phase of the hadronic elastic amplitude. The data exclude the traditionally 
 applied Simplified West and Yennie interference formula requiring a constant 
 phase and a purely exponential modulus of the hadronic amplitude. 
-For non-exponential parameterisations of the hadronic 
+For non-exponential parametrisations of the hadronic 
 modulus, on the other hand, the data are compatible with hadronic phase 
 functions producing either centrally or peripherally dominated impact 
 parameter distributions in elastic scattering events. In both cases, 
