--- a/2013/1km paper/abstract.tex
+++ b/2013/1km paper/abstract.tex
@@ -1,21 +1,21 @@
 The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
 scattering at the centre-of-mass energy 
-$\sqrt{s}=8\,$TeV and squared four-momentum transfers $|t|$ from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
+$\sqrt{s}=8\,$TeV and four-momentum transfers squared, $|t|$, from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
 Near the lower end of the $t$-interval, for
 $|t| \lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
 sensitive to the 
 interference between the hadronic and the electromagnetic scattering amplitudes.
-This article presents the measured cross-section and the constraints it 
+This article presents the elastic cross-section measurement and the constraints it 
 imposes on the functional forms of the interference term and of modulus and
-phase of the hadronic elastic amplitude. The data exclude the traditionally 
-applied Simplified West and Yennie interference formula requiring a constant 
+phase of the hadronic elastic amplitude. The data exclude the traditional 
+Simplified West and Yennie interference formula requiring a constant 
 phase and a purely exponential modulus of the hadronic amplitude. 
 For non-exponential parametrisations of the hadronic 
-modulus, on the other hand, the data are compatible with hadronic phase 
+modulus the data are compatible with hadronic phase 
 functions producing either centrally or peripherally dominated impact 
 parameter distributions in elastic scattering events. In both cases, 
-the $\rho$-parameter, i.e. the arctangent of the hadronic phase at $t = 0$,
-was found to be $0.12 \pm 0.03$. The results for the total hadronic 
+the $\rho$-parameter is found to be $0.12 \pm 0.03$. 
+The results for the total hadronic 
 cross-section are $\sigma_{\rm tot} = (102.9 \pm 2.3)$\,mb and 
 $(103.0 \pm 2.3)$\,mb for central and peripheral phase formulations, 
 respectively. Both are consistent with previous TOTEM measurements.
