--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -1,27 +1,25 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear or hadronic and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a scattering amplitude, nuclear ${\cal A}^{\rm N}(t)$ and Coulomb ${\cal A}^{\rm C}(t)$. Moreover, the combined scattering amplitude receives a third contribution reflecting Feynman diagrams with both strong and electromagnetic exchanges. The latter term, together with the complex character of the scattering amplitudes, is responsible for the effects of Coulomb-nuclear interference (CNI) in the differential cross-section. Since the Coulomb amplitude is known, the CNI exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The CNI effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e.~-- for typical LHC centre-of-mass energies of a few TeV -- near $|t| \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to the nuclear phase, $\arg {\cal A}^{\rm N}(t)$, is limited to a region at very small $|t|$, making any conclusions on the 
-functional form of the phase difficult.
+Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction is commonly neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical of elastic scattering. In this context, the strong interaction is traditionally called nuclear or hadronic and the electromagnetic Coulomb. In quantum-theory description, each of these interactions is described by a scattering amplitude, nuclear ${\cal A}^{\rm N}(t)$ and Coulomb ${\cal A}^{\rm C}(t)$. Moreover, the combined scattering amplitude receives a third contribution reflecting Feynman diagrams with both strong and electromagnetic exchanges. This term, together with the complex character of the scattering amplitudes, is responsible for the effects of Coulomb-nuclear interference (CNI) in the differential cross-section. Since the Coulomb amplitude is known, measuring the CNI gives access to the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The CNI effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e.~-- for typical LHC centre-of-mass energies of a few TeV -- near $|t| \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to the nuclear phase, $\arg {\cal A}^{\rm N}(t)$, is limited to a region at very small $|t|$, making difficult any conclusions on the 
+functional form of the phase.
 
 In the analyses of past experiments -- see e.g.~\cite{plb43,plb66,npb141,prl47,plb115,plb120,plb128,npb262} 
 (ISR),~\cite{plb198,plb316} ($\rm S\bar{p}pS$),~\cite{prl68} (Tevatron) --
-typically a strongly simplified interference formula was used. This so-called
+a strongly simplified interference formula was used. This so-called
 Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
 constant phase for all $t$ (see the discussion in 
 Section~\ref{sec:cni interference}).
-As result, the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
-equivalently
+As a representative quantity, the phase value at $t=0$, or equivalently
 \begin{equation}
 \label{eq:rho def}
 \rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{\Re {\cal A}^{\rm N} (0)}{\Im {\cal A}^{\rm N} (0)}
 \end{equation}
 was traditionally quoted. 
-An interesting aspect of $\rho$ is its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
+An interesting aspect of $\rho$ is its predictive power in extrapolating the total cross-section to higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
-The present article discusses the first measurement of elastic scattering in the CNI region at the CERN LHC by the TOTEM experiment. The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics ($\beta^{*}=1000\,$m) and cover a $|t|$-interval from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, extending well into the interference region. In order to strengthen the statistical power and thus enable a cleaner identification of the interference effects, the analysis also exploits another, complementary data set with high statistics~\cite{8tev-90m}, taken at the same energy but with different beam optics ($\beta^{*}=90\,$m) and covering a hadronically dominated $t$-range: $0.027 < |t| < 0.2\un{GeV^2}$. The isolated analysis of the latter data set has already excluded a purely exponential behaviour of the observed elastic cross-section with more than $7\un{\sigma}$ confidence. The new data in the CNI region allow for studying the source of the non-exponentiality: nuclear component, CNI effects or both. In order to explore the full spectrum of possibilities, an interference formula without the limitations of SWY is needed. Therefore the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) interference formula~\cite{kl94} is applied in the present study, which offers much more freedom for the choice of the theoretically unknown functional forms of the hadronic modulus and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively expressed in terms of $\rho$, become conditional to the choice of the model describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional form of the hadronic phase at small $|t|$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs.~peripherality). It will be shown that both options are compatible with the data, thus the central picture prevalent in theoretical models is not a necessity.
+The present article discusses the first measurement of elastic scattering in the CNI region at the CERN LHC by the TOTEM experiment. The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics ($\beta^{*}=1000\,$m) and cover a $|t|$-interval from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, extending well into the interference region. In order to strengthen the statistical power and thus enable a cleaner identification of the interference effects, the analysis also exploits another, complementary data set with higher statistics~\cite{8tev-90m}, taken at the same energy, with different beam optics ($\beta^{*}=90\,$m), and covering a different $t$-range: $0.027 < |t| < 0.2\un{GeV^2}$. The isolated analysis of the latter data set has excluded a purely exponential behaviour of the observed elastic cross-section with more than $7\un{\sigma}$ confidence. The new data in the CNI region allow to study the source of the non-exponentiality: nuclear component, CNI effects or both. In order to explore the full spectrum of possibilities, an interference formula without the limitations of SWY is needed. In the present study the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) interference formula~\cite{kl94} is used, which offers much more freedom for the choice of the theoretically unknown functional forms of the hadronic modulus and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively expressed in terms of $\rho$, become conditional to the choice of the model describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional form of the hadronic phase at small $|t|$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs.~peripherality). It will be shown that both options are compatible with the data, thus the central picture still prevalent in theoretical models is not a necessity.
 
-The article is structured in the following way. Section~\ref{sec:exp apparatus} outlines the experimental setup used for the measurement. The properties of the special beam optics are described in Section~\ref{sec:beam optics}. Section~\ref{sec:data taking} gives details of the data-taking conditions. The data analysis and reconstruction of the differential cross-section are described in Section~\ref{sec:differential cross-section}. Section~\ref{sec:coulomb} presents the study of the Coulomb-nuclear interference together with the functional form of the hadronic amplitude. As central
-results, the values of $\rho$ and $\sigma_{\rm tot}$ are determined.
+Section~\ref{sec:exp apparatus} of this article outlines the experimental setup used for the measurement. The properties of the special beam optics are described in Section~\ref{sec:beam optics}. Section~\ref{sec:data taking} gives details of the data-taking conditions. The data analysis and reconstruction of the differential cross-section are described in Section~\ref{sec:differential cross-section}. Section~\ref{sec:coulomb} presents the study of the Coulomb-nuclear interference together with the functional form of the hadronic amplitude. The values of $\rho$ and $\sigma_{\rm tot}$ are determined.
