--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -6,27 +6,30 @@ the CMS experiment, is dedicated to the measurement of the total
 cross-section, elastic scattering
 and diffractive processes. The experimental
 apparatus, symmetric with respect to the IP, is 
-composed of a Roman Pot (RP) proton spectrometer and the forward tracking 
-telescopes T1 and T2. All subdetectors have trigger capability. 
-While a complete description of the TOTEM detector instrumentation 
-and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}, 
-the present article focusses on the data from the RPs, movable beam-pipe
-insertions that approach the LHC beam very closely to detect protons with
-scattering angles of only a few microradians. 
-The RPs are organised in two stations: one on the left side of the IP 
+composed of a forward proton spectrometer (Roman Pots, RPs) and the 
+forward tracking telescopes T1 and T2. 
+A complete description of the TOTEM detector instrumentation 
+and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}. 
+The data analysed here are from the RPs only. A RP is a movable beam-pipe
+insertion capable of approaching the LHC beam to less than a millimeter, in 
+order to detect protons with scattering angles of only a few microradians. 
+The proton spectrometer is organised in two RP stations: one on the left side of the IP 
 (LHC sector 45) and one on the right (LHC sector 56).
 Each RP station, located between 215 and 220\,m from the IP, is composed of two 
 units: ``near'' (215\,m from the IP) and ``far'' (220\,m). 
-A unit consists of 3 RPs, two
-approaching the outgoing beam vertically and one horizontally.
-Each RP is equipped with a stack of 10 silicon
+A unit consists of 3 RPs, one
+approaching the outgoing beam from the top, one from the bottom, and one 
+horizontally.
+Each RP houses a stack of 10 silicon
 strip detectors designed with the specific objective of
 reducing the insensitive area at the edge facing the beam
-to only a few tens of micrometers. The 5\,m long lever arm 
-between the near and the far RP units has two important
-advantages: the local track angles can be reconstructed
-with a precision of about $10\,\mu$rad, and a high trigger efficiency
-($> 99$\%) can be achieved as the proton trigger selection
-uses all RPs independently. Since elastic scattering events consist of two anti-parallel protons, the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
+to only a few tens of micrometers. Due to the 5\,m long lever arm 
+between the near and the far RP units 
+the local track angles can be reconstructed
+with a precision of about $10\,\mu$rad. A high trigger efficiency
+($> 99$\%) is achieved by using all RPs independently. 
+Since elastic scattering events consist of two collinear protons emitted in 
+opposite directions, the detected events can have two topologies, called 
+diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
-This report will use a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
+This report uses a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
