--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -10,7 +10,7 @@ composed of a forward proton spectrometer (Roman Pots, RPs) and the
 forward tracking telescopes T1 and T2. 
 A complete description of the TOTEM detector instrumentation 
 and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}. 
-The data analysed here are from the RPs only. A RP is a movable beam-pipe
+The data analysed here come from the RPs only. A RP is a movable beam-pipe
 insertion capable of approaching the LHC beam to less than a millimeter, in 
 order to detect protons with scattering angles of only a few microradians. 
 The proton spectrometer is organised in two RP stations: one on the left side of the IP 
